--- a/index.html
+++ b/index.html
@@ -559,7 +559,7 @@ footer a:hover {
   </main>
 
   <footer>
-    <p>Created by <a href="#" target="_blank" title="View Anikó on LinkedIn">Anikó Borosová</a>, 2017</p>
+    <p>Created by <a href="###" target="_blank" title="View Anikó on LinkedIn">Anikó Borosová</a>, 2017</p>
     <small>
     <p>Header graphics by:</p> 
     <a rel="nofollow" target="_blank" href="https://www.vecteezy.com" title="Vecteezy">Vecteezy</a> |
